--- a/redThon/templates/game.html
+++ b/redThon/templates/game.html
@@ -277,7 +277,10 @@
             $.ajax({
 				type: "GET",
 				url: "/rank_load",
-				cache: false,
+				data: {
+					"stage" : "{{request.args.get('stage', 0)}}"
+				},
+                cache: false,
 				async: false,
 				success: function(result) {
                     $("#rank_div").html("");
@@ -286,10 +289,7 @@
                         $("#rank_div").append("<tr><td>"+rank+"</td><td>"+result[i]["stage"]+"</td><td>"+result[i]["user_id"]+"</td><td>"+result[i]["speed"]+"</td><td>"+result[i]["click"]+"</td></tr>");
                         $("#bookmarkDiv").show();
                         rank++;
-                    }
-                    
-                    
-                    //이동
+                    }                    
 				}
 			});
         }
